--- a/views/auth/index.html
+++ b/views/auth/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="/auth/styles.css" />
     <title>Document</title>
   </head>
-  <body class="">
+  <body class="text-red-500">
     Login Page
     <form id="login-form">
       <input type="text" id="username" placeholder="username" />
       <input type="password" id="password" placeholder="password" />
-        <button type="submit">Login</button>
+      <button type="submit">Login</button>
     </form>
     <script src="/auth/script.js"></script>
   </body>
