--- a/views/auth/index.html
+++ b/views/auth/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/auth/styles.css" />
-    <title>Document</title>
+    <title>Login Page</title>
   </head>
-  <body class="text-red-500">
-    Login Page
-    <form id="login-form">
-      <input type="text" id="username" placeholder="username" />
-      <input type="password" id="password" placeholder="password" />
-      <button type="submit">Login</button>
-    </form>
+  <body class="body">
+    <div class="container">
+      <h1 class="title">Login Page</h1>
+      <form id="login-form" class="form">
+        <input type="text" id="username" placeholder="username" class="input" />
+        <input
+          type="password"
+          id="password"
+          placeholder="password"
+          class="input"
+        />
+        <button type="submit" class="submit-button">Login</button>
+      </form>
+    </div>
     <script src="/auth/script.js"></script>
   </body>
 </html>
